- Add 4 packages required for Entity Framework - update readme and get connection string from config file

--- a/source_code/ids-server/appsettings.json
+++ b/source_code/ids-server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=IdentityServer.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
