Add Seed data class

--- a/source_code/ids-server/appsettings.json
+++ b/source_code/ids-server/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=IdentityServer.db"
   },
+  "SeedData": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
