--- a/source_code/ids-server/idsserver.csproj
+++ b/source_code/ids-server/idsserver.csproj
@@ -6,8 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Duende.IdentityServer" Version="5.1.0" />
+    <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="5.1.0" />
     <PackageReference Include="Duende.IdentityServer.EntityFramework" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
