--- a/source_code/react-client/package.json
+++ b/source_code/react-client/package.json
@@ -36,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@pact-foundation/pact": "^9.15.5",
+    "@pact-foundation/pact-node": "^10.12.2"
   }
 }
