--- a/source_code/react-client/package.json
+++ b/source_code/react-client/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@pact-foundation/pact": "^9.15.5",
-    "@pact-foundation/pact-node": "^10.12.2"
+    "@pact-foundation/pact-node": "^10.12.2",
+    "cross-env": "^7.0.3"
   }
 }
