--- a/source_code/react-client/package.json
+++ b/source_code/react-client/package.json
@@ -18,7 +18,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:pact": "cross-env CI=true react-scripts test --runInBand --setupFiles ./pact/setup.js --setupTestFrameworkScriptFile ./pact/jest-wrapper.js --testMatch \"**/*.test.pact.js\""
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +40,7 @@
   "devDependencies": {
     "@pact-foundation/pact": "^9.15.5",
     "@pact-foundation/pact-node": "^10.12.2",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "jest-pact": "^0.9.0"
   }
 }
