--- a/source_code/react-client/package.json
+++ b/source_code/react-client/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "test:pact": "react-scripts test --CI --runInBand --detectOpenHandles",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
