feat: Add pact testing (#4)
add PACT testing

--- a/source_code/weatherapi/appsettings.Development.json
+++ b/source_code/weatherapi/appsettings.Development.json
@@ -1,9 +1,11 @@
 {
+  "IDSServer": "https://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
