--- a/source_code/react-client/package.json
+++ b/source_code/react-client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "dotenv": "^10.0.0",
     "oidc-client": "^1.11.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -18,7 +19,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:pact": "react-scripts test --CI --runInBand --detectOpenHandles",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pact-publish": "node publish-pact.js",
+    "can-i-deploy": "node can-i-deploy.js"
   },
   "eslintConfig": {
     "extends": [
