System.ArgumentException: Format of the initialization string does not conform to specification starting at index 0.

--- a/source_code/ids-server/appsettings.json
+++ b/source_code/ids-server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=IdentityServer.db"
+    "DefaultConnection": "IdentityServerDb"
   },
   "SeedData": true,
   "Logging": {
