--- a/source_code/ids-server/ClientApp/package.json
+++ b/source_code/ids-server/ClientApp/package.json
@@ -43,7 +43,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "tailwindcss": "2.1.2",
+    "tailwindcss": "^2.2.19",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "^4.3.5"
