--- a/source_code/weatherapi/Properties/launchSettings.json
+++ b/source_code/weatherapi/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5002;http://localhost:5003",
+      "applicationUrl": "https://localhost:5003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
