--- a/source_code/ids-server/appsettings.json
+++ b/source_code/ids-server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "IdentityServerDb"
+    "DefaultConnection": "Data Source=.;Initial Catalog=IdentityServerDb;Integrated Security=True;MultipleActiveResultSets=True"
   },
   "SeedData": true,
   "Logging": {
