All Nuget packages Updated

--- a/source_code/ClayUAC.Api/ClayUAC.Api.Api/appsettings.json
+++ b/source_code/ClayUAC.Api/ClayUAC.Api.Api/appsettings.json
@@ -1,14 +1,14 @@
 {
-  "UseInMemoryDatabase": false,
+  "UseInMemoryDatabase": true,
   "ConnectionStrings": {
-    "ApplicationConnection": "Data Source=.;Initial Catalog=ClayUAC.Api;Integrated Security=True;MultipleActiveResultSets=True",
-    "IdentityConnection": "Data Source=.;Initial Catalog=ClayUAC.Api;Integrated Security=True;MultipleActiveResultSets=True"
+    "ApplicationConnection": "Data Source=IDB.db",
+    "IdentityConnection": "Data Source=IDB.db"
   },
   "JWTSettings": {
     "Key": "C1CF4B4DC1C4177B7618DE4F55CA2",
     "Issuer": "ClayUAC.Api.Api",
     "Audience": "ClayUAC.Api.Api.User",
-    "DurationInMinutes": 60
+    "DurationInMinutes": 5
   },
   "Logging": {
     "LogLevel": {
